--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^15.7.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.6"
+    "firebase": "^9.11.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "^2.7.0",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.0",
+    "react-native-web": "^0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
