--- a/package.json
+++ b/package.json
@@ -13,21 +13,49 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^15.7.0",
     "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.0",
-    "expo": "~46.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "expo": "^46.0.16",
     "expo-status-bar": "~1.4.0",
-    "firebase": "^9.11.0",
-    "react": "^18.0.0",
+    "firebase": "^9.12.1",
+    "i18next": "^21.10.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.69.6",
-    "react-native-gesture-handler": "^2.7.0",
-    "react-native-reanimated": "^2.10.0",
+    "react-i18next": "^11.18.6",
+    "react-native": "0.70.3",
+    "react-native-bootsplash": "^4.3.2",
+    "react-native-easy-icon": "^1.0.10",
+    "react-native-gesture-handler": "^2.7.1",
+    "react-native-reanimated": "^3.0.0-rc.3",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0",
-    "react-native-web": "^0.18.9"
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.18.9",
+    "styled-components": "^5.3.6",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3",
+    "@babel/runtime": "^7.19.4",
+    "@react-native-community/eslint-config": "^3.1.0",
+    "@types/react": "^18.0.21",
+    "@types/react-native": "^0.70.4",
+    "@types/react-native-vector-icons": "^6.4.12",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "app-icon": "^0.13.2",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^8.25.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.0",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "husky": "^8.0.1",
+    "metro-react-native-babel-preset": "^0.73.2",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "private": true
 }
