--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.2",
+    "@expo/webpack-config": "^0.17.3",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^15.7.0",
+    "@react-native-firebase/app": "^16.4.2",
+    "@react-native-firebase/auth": "^16.4.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "^46.0.16",
+    "expo-auth-session": "^3.7.1",
+    "expo-random": "~12.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
     "i18next": "^21.10.0",
-    "react": "^18.2.0",
+    "react": "^18.1.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.3",
